[gd_scene load_steps=9 format=2]

[ext_resource path="res://items/rat.png" type="Texture" id=1]
[ext_resource path="res://Scenes/RatSwarm/HitBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/RatEnemy.gd" type="Script" id=3]
[ext_resource path="res://Scenes/RatSwarm/PlayerDetectionZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://Pawspector Valley/Scenes/MiscScenes/Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/RatSwarm/HurtBox.tscn" type="PackedScene" id=6]

[sub_resource type="CircleShape2D" id=2]
radius = 232.86

[sub_resource type="CircleShape2D" id=3]
radius = 3.0

[node name="RatEnemy" type="KinematicBody2D"]
position = Vector2( 40, 34 )
collision_layer = 65
collision_mask = 5
script = ExtResource( 3 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 4 )]
collision_mask = 8

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource( 2 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_health = 3

[node name="HitBox" parent="." instance=ExtResource( 2 )]
collision_mask = 21

[node name="CollisionShape2D" parent="HitBox" index="0"]
shape = SubResource( 3 )

[node name="HurtBox" parent="." instance=ExtResource( 6 )]
collision_layer = 32
collision_mask = 5

[node name="Sprite" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.640625, 0.640625 )
texture = ExtResource( 1 )

[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]

[editable path="PlayerDetectionZone"]
[editable path="HitBox"]
[editable path="HurtBox"]
